CD1/y.output
Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression INC_OP
   11                   | postfix_expression DEC_OP

   12 argument_expression_list: assignment_expression
   13                         | argument_expression_list ',' assignment_expression

   14 unary_expression: postfix_expression
   15                 | INC_OP unary_expression
   16                 | DEC_OP unary_expression
   17                 | unary_operator cast_expression
   18                 | SIZEOF unary_expression

   19 unary_operator: '&'
   20               | '*'
   21               | '+'
   22               | '-'
   23               | '~'
   24               | '!'

   25 cast_expression: unary_expression

   26 multiplicative_expression: cast_expression
   27                          | multiplicative_expression '*' cast_expression
   28                          | multiplicative_expression '/' cast_expression
   29                          | multiplicative_expression '%' cast_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression '+' multiplicative_expression
   32                    | additive_expression '-' multiplicative_expression

   33 shift_expression: additive_expression
   34                 | shift_expression LEFT_OP additive_expression
   35                 | shift_expression RIGHT_OP additive_expression

   36 relational_expression: shift_expression
   37                      | relational_expression '<' shift_expression
   38                      | relational_expression '>' shift_expression
   39                      | relational_expression LE_OP shift_expression
   40                      | relational_expression GE_OP shift_expression

   41 equality_expression: relational_expression
   42                    | equality_expression EQ_OP relational_expression
   43                    | equality_expression NE_OP relational_expression

   44 and_expression: equality_expression
   45               | and_expression '&' equality_expression

   46 exclusive_or_expression: and_expression
   47                        | exclusive_or_expression '^' and_expression

   48 inclusive_or_expression: exclusive_or_expression
   49                        | inclusive_or_expression '|' exclusive_or_expression

   50 logical_and_expression: inclusive_or_expression
   51                       | logical_and_expression AND_OP inclusive_or_expression

   52 logical_or_expression: logical_and_expression
   53                      | logical_or_expression OR_OP logical_and_expression

   54 conditional_expression: logical_or_expression
   55                       | logical_or_expression '?' expression ':' conditional_expression

   56 assignment_expression: conditional_expression
   57                      | unary_expression assignment_operator assignment_expression

   58 assignment_operator: '='
   59                    | MUL_ASSIGN
   60                    | DIV_ASSIGN
   61                    | MOD_ASSIGN
   62                    | ADD_ASSIGN
   63                    | SUB_ASSIGN
   64                    | LEFT_ASSIGN
   65                    | RIGHT_ASSIGN
   66                    | AND_ASSIGN
   67                    | XOR_ASSIGN
   68                    | OR_ASSIGN

   69 expression: assignment_expression
   70           | expression ',' assignment_expression

   71 constant_expression: conditional_expression

   72 declaration: declaration_specifiers ';'
   73            | declaration_specifiers init_declarator_list ';'

   74 declaration_specifiers: storage_class_specifier
   75                       | storage_class_specifier declaration_specifiers
   76                       | type_specifier
   77                       | type_specifier declaration_specifiers
   78                       | type_qualifier
   79                       | type_qualifier declaration_specifiers

   80 init_declarator_list: init_declarator
   81                     | init_declarator_list ',' init_declarator

   82 init_declarator: declarator
   83                | declarator '=' initializer

   84 storage_class_specifier: TYPEDEF
   85                        | EXTERN
   86                        | STATIC
   87                        | AUTO
   88                        | REGISTER

   89 type_specifier: VOID
   90               | CHAR
   91               | SHORT
   92               | INT
   93               | LONG
   94               | FLOAT
   95               | DOUBLE
   96               | SIGNED
   97               | UNSIGNED
   98               | struct_or_union_specifier
   99               | enum_specifier

  100 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  101                          | struct_or_union '{' struct_declaration_list '}'
  102                          | struct_or_union IDENTIFIER

  103 struct_or_union: STRUCT
  104                | UNION

  105 struct_declaration_list: struct_declaration
  106                        | struct_declaration_list struct_declaration

  107 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  108 specifier_qualifier_list: type_specifier specifier_qualifier_list
  109                         | type_specifier
  110                         | type_qualifier specifier_qualifier_list
  111                         | type_qualifier

  112 struct_declarator_list: struct_declarator
  113                       | struct_declarator_list ',' struct_declarator

  114 struct_declarator: declarator
  115                  | ':' constant_expression
  116                  | declarator ':' constant_expression

  117 enum_specifier: ENUM '{' enumerator_list '}'
  118               | ENUM IDENTIFIER '{' enumerator_list '}'
  119               | ENUM IDENTIFIER

  120 enumerator_list: enumerator
  121                | enumerator_list ',' enumerator

  122 enumerator: IDENTIFIER
  123           | IDENTIFIER '=' constant_expression

  124 type_qualifier: CONST
  125               | VOLATILE

  126 declarator: pointer direct_declarator
  127           | direct_declarator

  128 direct_declarator: IDENTIFIER
  129                  | '(' declarator ')'
  130                  | direct_declarator '[' constant_expression ']'
  131                  | direct_declarator '[' ']'
  132                  | direct_declarator '(' parameter_type_list ')'
  133                  | direct_declarator '(' identifier_list ')'
  134                  | direct_declarator '(' ')'

  135 pointer: '*'
  136        | '*' type_qualifier_list
  137        | '*' pointer
  138        | '*' type_qualifier_list pointer

  139 type_qualifier_list: type_qualifier
  140                    | type_qualifier_list type_qualifier

  141 parameter_type_list: parameter_list

  142 parameter_list: parameter_declaration
  143               | parameter_list ',' parameter_declaration

  144 parameter_declaration: declaration_specifiers declarator
  145                      | declaration_specifiers abstract_declarator
  146                      | declaration_specifiers

  147 identifier_list: IDENTIFIER
  148                | identifier_list ',' IDENTIFIER

  149 abstract_declarator: pointer
  150                    | direct_abstract_declarator
  151                    | pointer direct_abstract_declarator

  152 direct_abstract_declarator: '(' abstract_declarator ')'
  153                           | '[' ']'
  154                           | '[' constant_expression ']'
  155                           | direct_abstract_declarator '[' ']'
  156                           | direct_abstract_declarator '[' constant_expression ']'
  157                           | '(' ')'
  158                           | '(' parameter_type_list ')'
  159                           | direct_abstract_declarator '(' ')'
  160                           | direct_abstract_declarator '(' parameter_type_list ')'

  161 initializer: assignment_expression
  162            | '{' initializer_list '}'
  163            | '{' initializer_list ',' '}'

  164 initializer_list: initializer
  165                 | initializer_list ',' initializer

  166 statement: labeled_statement
  167          | compound_statement
  168          | expression_statement
  169          | selection_statement
  170          | iteration_statement
  171          | jump_statement

  172 labeled_statement: IDENTIFIER ':' statement
  173                  | CASE constant_expression ':' statement
  174                  | DEFAULT ':' statement

  175 compound_statement: '{' '}'
  176                   | '{' statement_list '}'
  177                   | '{' declaration_list '}'
  178                   | '{' declaration_list statement_list '}'

  179 declaration_list: declaration
  180                 | declaration_list declaration

  181 statement_list: statement
  182               | statement_list statement

  183 expression_statement: ';'
  184                     | expression ';'

  185 selection_statement: SWITCH '(' expression ')' statement
  186                    | IF '(' expression ')' statement
  187                    | IF '(' expression ')' statement ELSE statement

  188 iteration_statement: WHILE '(' expression ')' statement
  189                    | DO statement WHILE '(' expression ')' ';'
  190                    | FOR '(' expression_statement expression_statement ')' statement
  191                    | FOR '(' expression_statement expression_statement expression ')' statement
  192                    | error ';'

  193 jump_statement: GOTO IDENTIFIER ';'
  194               | CONTINUE ';'
  195               | BREAK ';'
  196               | RETURN ';'
  197               | RETURN expression ';'

  198 translation_unit: external_declaration
  199                 | translation_unit external_declaration

  200 external_declaration: function_definition
  201                     | declaration

  202 function_definition: declaration_specifiers declarator declaration_list compound_statement
  203                    | declaration_specifiers declarator compound_statement
  204                    | declarator declaration_list compound_statement
  205                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 24
'%' (37) 29
'&' (38) 19 45
'(' (40) 4 7 8 129 132 133 134 152 157 158 159 160 185 186 187 188
    189 190 191
')' (41) 4 7 8 129 132 133 134 152 157 158 159 160 185 186 187 188
    189 190 191
'*' (42) 20 27 135 136 137 138
'+' (43) 21 31
',' (44) 13 70 81 113 121 143 148 163 165
'-' (45) 22 32
'.' (46) 9
'/' (47) 28
':' (58) 55 115 116 172 173 174
';' (59) 72 73 107 183 184 189 192 193 194 195 196 197
'<' (60) 37
'=' (61) 58 83 123
'>' (62) 38
'?' (63) 55
'[' (91) 6 130 131 153 154 155 156
']' (93) 6 130 131 153 154 155 156
'^' (94) 47
'{' (123) 100 101 117 118 162 163 175 176 177 178
'|' (124) 49
'}' (125) 100 101 117 118 162 163 175 176 177 178
'~' (126) 23
error (256) 192
IDENTIFIER (258) 1 9 100 102 118 119 122 123 128 147 148 172 193
CONSTANT (259) 2
STRING_LITERAL (260) 3
SIZEOF (261) 18
INC_OP (262) 10 15
DEC_OP (263) 11 16
LE_OP (264) 39
GE_OP (265) 40
EQ_OP (266) 42
NE_OP (267) 43
LEFT_OP (268) 34
RIGHT_OP (269) 35
AND_OP (270) 51
OR_OP (271) 53
MUL_ASSIGN (272) 59
DIV_ASSIGN (273) 60
MOD_ASSIGN (274) 61
ADD_ASSIGN (275) 62
SUB_ASSIGN (276) 63
LEFT_ASSIGN (277) 64
RIGHT_ASSIGN (278) 65
AND_ASSIGN (279) 66
XOR_ASSIGN (280) 67
OR_ASSIGN (281) 68
TYPEDEF (282) 84
EXTERN (283) 85
STATIC (284) 86
AUTO (285) 87
REGISTER (286) 88
CHAR (287) 90
SHORT (288) 91
INT (289) 92
LONG (290) 93
SIGNED (291) 96
UNSIGNED (292) 97
FLOAT (293) 94
DOUBLE (294) 95
CONST (295) 124
VOLATILE (296) 125
VOID (297) 89
STRUCT (298) 103
UNION (299) 104
ENUM (300) 117 118 119
CASE (301) 173
DEFAULT (302) 174
IF (303) 186 187
ELSE (304) 187
SWITCH (305) 185
WHILE (306) 188 189
DO (307) 189
FOR (308) 190 191
GOTO (309) 193
CONTINUE (310) 194
BREAK (311) 195
RETURN (312) 196 197
LOWER_THAN_ELSE (313)


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
primary_expression (84)
    on left: 1 2 3 4, on right: 5
postfix_expression (85)
    on left: 5 6 7 8 9 10 11, on right: 6 7 8 9 10 11 14
argument_expression_list (86)
    on left: 12 13, on right: 8 13
unary_expression (87)
    on left: 14 15 16 17 18, on right: 15 16 18 25 57
unary_operator (88)
    on left: 19 20 21 22 23 24, on right: 17
cast_expression (89)
    on left: 25, on right: 17 26 27 28 29
multiplicative_expression (90)
    on left: 26 27 28 29, on right: 27 28 29 30 31 32
additive_expression (91)
    on left: 30 31 32, on right: 31 32 33 34 35
shift_expression (92)
    on left: 33 34 35, on right: 34 35 36 37 38 39 40
relational_expression (93)
    on left: 36 37 38 39 40, on right: 37 38 39 40 41 42 43
equality_expression (94)
    on left: 41 42 43, on right: 42 43 44 45
and_expression (95)
    on left: 44 45, on right: 45 46 47
exclusive_or_expression (96)
    on left: 46 47, on right: 47 48 49
inclusive_or_expression (97)
    on left: 48 49, on right: 49 50 51
logical_and_expression (98)
    on left: 50 51, on right: 51 52 53
logical_or_expression (99)
    on left: 52 53, on right: 53 54 55
conditional_expression (100)
    on left: 54 55, on right: 55 56 71
assignment_expression (101)
    on left: 56 57, on right: 12 13 57 69 70 161
assignment_operator (102)
    on left: 58 59 60 61 62 63 64 65 66 67 68, on right: 57
expression (103)
    on left: 69 70, on right: 4 6 55 70 184 185 186 187 188 189 191
    197
constant_expression (104)
    on left: 71, on right: 115 116 123 130 154 156 173
declaration (105)
    on left: 72 73, on right: 179 180 201
declaration_specifiers (106)
    on left: 74 75 76 77 78 79, on right: 72 73 75 77 79 144 145 146
    202 203
init_declarator_list (107)
    on left: 80 81, on right: 73 81
init_declarator (108)
    on left: 82 83, on right: 80 81
storage_class_specifier (109)
    on left: 84 85 86 87 88, on right: 74 75
type_specifier (110)
    on left: 89 90 91 92 93 94 95 96 97 98 99, on right: 76 77 108
    109
struct_or_union_specifier (111)
    on left: 100 101 102, on right: 98
struct_or_union (112)
    on left: 103 104, on right: 100 101 102
struct_declaration_list (113)
    on left: 105 106, on right: 100 101 106
struct_declaration (114)
    on left: 107, on right: 105 106
specifier_qualifier_list (115)
    on left: 108 109 110 111, on right: 107 108 110
struct_declarator_list (116)
    on left: 112 113, on right: 107 113
struct_declarator (117)
    on left: 114 115 116, on right: 112 113
enum_specifier (118)
    on left: 117 118 119, on right: 99
enumerator_list (119)
    on left: 120 121, on right: 117 118 121
enumerator (120)
    on left: 122 123, on right: 120 121
type_qualifier (121)
    on left: 124 125, on right: 78 79 110 111 139 140
declarator (122)
    on left: 126 127, on right: 82 83 114 116 129 144 202 203 204 205
direct_declarator (123)
    on left: 128 129 130 131 132 133 134, on right: 126 127 130 131
    132 133 134
pointer (124)
    on left: 135 136 137 138, on right: 126 137 138 149 151
type_qualifier_list (125)
    on left: 139 140, on right: 136 138 140
parameter_type_list (126)
    on left: 141, on right: 132 158 160
parameter_list (127)
    on left: 142 143, on right: 141 143
parameter_declaration (128)
    on left: 144 145 146, on right: 142 143
identifier_list (129)
    on left: 147 148, on right: 133 148
abstract_declarator (130)
    on left: 149 150 151, on right: 145 152
direct_abstract_declarator (131)
    on left: 152 153 154 155 156 157 158 159 160, on right: 150 151
    155 156 159 160
initializer (132)
    on left: 161 162 163, on right: 83 164 165
initializer_list (133)
    on left: 164 165, on right: 162 163 165
statement (134)
    on left: 166 167 168 169 170 171, on right: 172 173 174 181 182
    185 186 187 188 189 190 191
labeled_statement (135)
    on left: 172 173 174, on right: 166
compound_statement (136)
    on left: 175 176 177 178, on right: 167 202 203 204 205
declaration_list (137)
    on left: 179 180, on right: 177 178 180 202 204
statement_list (138)
    on left: 181 182, on right: 176 178 182
expression_statement (139)
    on left: 183 184, on right: 168 190 191
selection_statement (140)
    on left: 185 186 187, on right: 169
iteration_statement (141)
    on left: 188 189 190 191 192, on right: 170
jump_statement (142)
    on left: 193 194 195 196 197, on right: 171
translation_unit (143)
    on left: 198 199, on right: 0 199
external_declaration (144)
    on left: 200 201, on right: 198 199
function_definition (145)
    on left: 202 203 204 205, on right: 200


State 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 15
    VOLATILE    shift, and go to state 16
    VOID        shift, and go to state 17
    STRUCT      shift, and go to state 18
    UNION       shift, and go to state 19
    ENUM        shift, and go to state 20
    '('         shift, and go to state 21
    '*'         shift, and go to state 22

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    declarator                 go to state 31
    direct_declarator          go to state 32
    pointer                    go to state 33
    translation_unit           go to state 34
    external_declaration       go to state 35
    function_definition        go to state 36


State 1

  128 direct_declarator: IDENTIFIER .

    $default  reduce using rule 128 (direct_declarator)


State 2

   84 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 84 (storage_class_specifier)


State 3

   85 storage_class_specifier: EXTERN .

    $default  reduce using rule 85 (storage_class_specifier)


State 4

   86 storage_class_specifier: STATIC .

    $default  reduce using rule 86 (storage_class_specifier)


State 5

   87 storage_class_specifier: AUTO .

    $default  reduce using rule 87 (storage_class_specifier)


State 6

   88 storage_class_specifier: REGISTER .

    $default  reduce using rule 88 (storage_class_specifier)


State 7

   90 type_specifier: CHAR .

    $default  reduce using rule 90 (type_specifier)


State 8

   91 type_specifier: SHORT .

    $default  reduce using rule 91 (type_specifier)


State 9

   92 type_specifier: INT .

    $default  reduce using rule 92 (type_specifier)


State 10

   93 type_specifier: LONG .

    $default  reduce using rule 93 (type_specifier)


State 11

   96 type_specifier: SIGNED .

    $default  reduce using rule 96 (type_specifier)


State 12

   97 type_specifier: UNSIGNED .

    $default  reduce using rule 97 (type_specifier)


State 13

   94 type_specifier: FLOAT .

    $default  reduce using rule 94 (type_specifier)


State 14

   95 type_specifier: DOUBLE .

    $default  reduce using rule 95 (type_specifier)


State 15

  124 type_qualifier: CONST .

    $default  reduce using rule 124 (type_qualifier)


State 16

  125 type_qualifier: VOLATILE .

    $default  reduce using rule 125 (type_qualifier)


State 17

   89 type_specifier: VOID .

    $default  reduce using rule 89 (type_specifier)


State 18

  103 struct_or_union: STRUCT .

    $default  reduce using rule 103 (struct_or_union)


State 19

  104 struct_or_union: UNION .

    $default  reduce using rule 104 (struct_or_union)


State 20

  117 enum_specifier: ENUM . '{' enumerator_list '}'
  118               | ENUM . IDENTIFIER '{' enumerator_list '}'
  119               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 37
    '{'         shift, and go to state 38


State 21

  129 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 21
    '*'         shift, and go to state 22

    declarator         go to state 39
    direct_declarator  go to state 32
    pointer            go to state 33


State 22

  135 pointer: '*' .
  136        | '*' . type_qualifier_list
  137        | '*' . pointer
  138        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    '*'       shift, and go to state 22

    $default  reduce using rule 135 (pointer)

    type_qualifier       go to state 40
    pointer              go to state 41
    type_qualifier_list  go to state 42


State 23

  201 external_declaration: declaration .

    $default  reduce using rule 201 (external_declaration)


State 24

   72 declaration: declaration_specifiers . ';'
   73            | declaration_specifiers . init_declarator_list ';'
  202 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  203                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 21
    '*'         shift, and go to state 22
    ';'         shift, and go to state 43

    init_declarator_list  go to state 44
    init_declarator       go to state 45
    declarator            go to state 46
    direct_declarator     go to state 32
    pointer               go to state 33


State 25

   74 declaration_specifiers: storage_class_specifier .
   75                       | storage_class_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    ENUM      shift, and go to state 20

    $default  reduce using rule 74 (declaration_specifiers)

    declaration_specifiers     go to state 47
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 26

   76 declaration_specifiers: type_specifier .
   77                       | type_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    ENUM      shift, and go to state 20

    $default  reduce using rule 76 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 27

   98 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 98 (type_specifier)


State 28

  100 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  101                          | struct_or_union . '{' struct_declaration_list '}'
  102                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 49
    '{'         shift, and go to state 50


State 29

   99 type_specifier: enum_specifier .

    $default  reduce using rule 99 (type_specifier)


State 30

   78 declaration_specifiers: type_qualifier .
   79                       | type_qualifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    ENUM      shift, and go to state 20

    $default  reduce using rule 78 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 31

  204 function_definition: declarator . declaration_list compound_statement
  205                    | declarator . compound_statement

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    ENUM      shift, and go to state 20
    '{'       shift, and go to state 52

    declaration                go to state 53
    declaration_specifiers     go to state 54
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    compound_statement         go to state 55
    declaration_list           go to state 56


State 32
